--- a/ip-address-tracker/src/containers/Layout.css
+++ b/ip-address-tracker/src/containers/Layout.css
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 450px;
+  height: 280px;
   background: url('../asset/images/pattern-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
